# vgi-wikipedia

./: .gitignore  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  serve.py  wikipedia_worker.py
.github/workflows/: ci.yml
ci/: README.md  preprocess-require.awk  run-integration.sh
scripts/: run_sql_e2e.sh
test/sql/: wiki_page.test  wiki_search.test
tests/: harness.py  mock_server.py  test_live.py  test_mock_e2e.py  test_parse.py  test_scalars.py  test_tables.py
tests/fixtures/: extract_action.json  search_page1.json  search_page2.json  summary.json  summary_minimal.json  summary_notfound.json
vgi_wikipedia/: __init__.py  client.py  meta.py  parse.py  scalars.py  schema_utils.py  tables.py  tables_page.py
